fixed nav links, uneven gaps and added new media rules, and changed snapshot of personal website

--- a/frontend/src/intro.css
+++ b/frontend/src/intro.css
@@ -79,6 +79,22 @@
     }
 }
 
+@media (min-width: 2190px) {
+    .intro-text {
+        font-size: 1.0rem;
+        margin-left: 120px;
+        margin-right: 120px;
+    }
+}    
+
+@media (min-width: 1400px) and (max-width: 2189px) {
+    .intro-text {
+        font-size: 1.1rem;
+        margin-left: 80px;
+        margin-right: 80px;
+    }
+}
+
 @media (min-width: 1200px) and (max-width: 1400px) {
     .intro-text {
         font-size: 1.1rem;
@@ -88,11 +104,6 @@
 
     .skill-card {
         margin-top: 25px;
-    }
-
-    .contactForm {
-        background-color: #fff !important;
-        box-shadow: 0 0 0 !important;
     }
 }
 
